base/adblocker/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/adblocker 
          type: DirectoryOrCreate 
        name: adblocker-home
