base/adblocker/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unbound
spec:
  entryPoints:
    - unboundtcp
  routes:
  - match: HostSNI(`*`)
    middlewares: []
    priority: 0
    services:
    - name: unbound
      namespace: adblocker
      port: 5335
      nativeLB: true
